Clarified user entrypoint, added more javadocs, removed unneeded code, begin adding unit tests